tests/functions/valid/rename_function_param.su
s32 foo(s32 b);

s32 main(){
    return foo(3);
}

s32 foo(s32 a){
    return a + 1;
}