tests/functions/invalid/declaration_mismatch.su
s32 foo(s32 a);

s32 main() {
    return 5;
}

s32 foo(s32 a, s32 b) {
    return 4;
}